fixes to overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@ html {
 
 body {
     margin: 0;
+    -ms-overflow-style: none;  /* IE 10+ */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 h1 {
